--- a/src/scss/layout/_infoBlock.scss
+++ b/src/scss/layout/_infoBlock.scss
@@ -33,7 +33,7 @@
         }
 
         h4 {
-          font-weight: bold;
+          font-weight: 400;
           @include basicFont();
         }
 
