--- a/src/scss/layout/_socialBlock.scss
+++ b/src/scss/layout/_socialBlock.scss
@@ -78,7 +78,7 @@
         .element__data {
           font-size: 55px;
           transform: scaleY(1.5);
-          font-weight: bold;
+          font-weight: 400;
           letter-spacing: -3px;
         }
 
